Connected app to mySQL database